added labs initial page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,287 @@
-Welcome to semicolon labs
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />	
+	<meta name="keywords" content="Semicolon developers, Semicolon Labs, semicolon languages, semicolon technologies, semicolon software, developers network, network professionals, web development nepal, software development nepal, offshore development nepal, outsourcing nepal" />
+	<meta name="description" content="Semicolon Labs is a place where Semicolon developers love to hangout on wednesdays. Enjoy our Wednesday toy projects." />
+
+	<title>Semicolon Labs :: HTML5, Javascript and Creativity :: Semicolon Developers, Kathmandu, Nepal</title>
+	<link rel="stylesheet" type="text/css" media="all" href="css/style.css" />				
+	<script src="js/jquery.js" type="text/javascript"></script>	
+	<script src="js/scroll.js" type="text/javascript"></script>
+</head>
+<body id="home">
+	<div class="container_12">
+	
+<!-- Start sidebar -->		
+		<div class="grid_4 alpha">						
+			<div id="sidebar">														
+			
+			<h1 class="logo">
+				<a href="#home">Semicolon Developers</a>
+			</h1>			
+			
+			<ul class="navigation">
+					<li>
+						<a class="simple_button" href="#home">Home</a>
+					</li>
+					<li>
+						<a class="simple_button" href="#baghchal">Baghchal</a>
+					</li>
+					<li>
+						<a class="simple_button" href="#typing-tutor">Typing Tutor</a>
+					</li>						
+					<li>
+						<a class="simple_button" href="#php-mysql-course">PHP/MySql Course</a>
+					</li>
+					<li>
+						<a class="simple_button" href="#codes">Semicolon Labs</a>
+					</li>										
+			</ul>					
+			<p>
+					<a href="http://semicolondev.com">Semicolon Developers</a>
+			</p>								
+			</div>
+		</div>
+<!-- end sidebar -->				
+
+<!-- Start of Introduction -->
+		
+		<div class="grid_8 prefix_3 suffix_1 toppadding">
+			<h1 class="semicolon-title">
+				Lovely Wednesdays
+			</h1>
+			<p>
+				Wednesdays at Semicolon Developers are awesome! We hangout on whatever we like. 
+				No project deadline ever gets scheduled on Wednesdays. 
+				We play with HTML5, Javascript, Node.Js. We build apps on Android.
+				We work on something that is challenging to our team.				
+				Wednesdays are fun here, they are hot and trendy too.<br/>												
+			</p>
+			<h2 class="semicolon-subtitle">
+				Why HTML5, Javascript 
+			</h2>
+			<p>
+				We like to sit and play inside broweser in realtime. That't it. If you like it, do it.
+			</p>
+			<h2 class="semicolon-subtitle">
+				Why Andriod? 
+			</h2>
+			<p>
+				We belive that sooner or later Nepali Mobile market will be ruled by Andriod tablets. 
+				Call it our Andriod love or take it as our passion for developling apps with local flavors, we won't stop doing it.
+			</p>
+		</div>
+		<div class="clear">
+			&nbsp;
+		</div>
+		<div class="grid_4 prefix_3">
+			<h2 class="semicolon-subtitle">
+				Semicolon Developers
+			</h2>
+			<p><br/>
+				We picked the name “semicolon” from the statement separator symbol semicolon (;) 
+				used in most of the popular programming languages like C/C++, PHP, .Net, JAVA etc. 
+				We call them semicolon family of programming languages, and hence our team – Semicolon Developers.
+			</p>
+			<p>
+				Our interest is more on collaborative development and we are highly focused on 
+				building network of developers around us, hence, 
+				promoting and investing on community project is one of our primary concern.
+			</p>
+			Visit Our Portfolio. <a href="http://semicolondev.com/category/portfolio">http://semicolondev.com/category/portfolio</a>
+		</div>
+		<div class="grid_4">
+			<h2 class="semicolon-subtitle">
+				Want to work with us?
+			</h2>
+			<p><br/>
+				We want to encourage programmers and developers to unite in a network here in Kathmandu valley. 
+				That way we will contribute to the software development sector in the country in group. 
+				More bright minds together, more quality works! 
+				Our effort will always be in supporting passionate beginners developers to move one step up 
+				and towards the world of professional software development.								
+			</p>
+			Check Our Jobs Page. <a href="http://semicolondev.com/category/blog/jobs">http://semicolondev.com/category/blog/jobs</a>
+			
+			
+		</div>
+		
+	<!-- End of Introduction -->
+		
+	
+<!-- Baghchal Details -->
+	
+		<div class="divider">
+			&nbsp;<a id="baghchal" name="baghchal"></a>
+		</div>						
+		<!-- Web Section -->													
+		<div class="grid_8 prefix_3 toppadding">		
+			<h1 class="semicolon-title">				
+				Baghchal
+			</h1>
+		</div>
+		<div class="grid_4 prefix_3">
+			<!-- RECENT WORK IMAGE-->
+			<a href="#"><img src="screenshots/baghchal.png" alt="Baghchal by Semicolon Developers" /></a>
+		</div><!-- end .grid_6 -->
+		<div class="grid_4">
+			<h2 class="semicolon-subtitle">
+				Bagchal is one of the Nepal's most <br/>popular two player board game
+			</h2>
+			<p>
+				<br/>We did a two player version (single pc/browser) of Baghchal with HTML5 Canvas/Javascript. 
+			</p>
+			<p>
+				This project is ongoing project. Current implementation might have bugs but we are eager to show you what we are upto.
+				Enjoy!
+			</p>
+			<p>
+				<a class="button_visit" href="#home">PLay Baghchal Online</a>
+			</p>
+			<p>
+				Check the Source Code (Google Code): <a class="button_next" target="_blank" href="http://code.google.com/p/bagchaal">http://code.google.com/p/bagchaal</a>
+			</p>					
+		</div>			
+		<div class="clear">
+			&nbsp;
+		</div>
+		
+<!-- Baghchal Details Ends here -->
+
+<!-- HTML5 Typing Tutor Details -->
+
+		<div class="divider">
+			&nbsp;<a id="typing-tutor" name="typing-tutor"></a>
+		</div>
+		<div class="grid_8 prefix_3 toppadding">
+		<!-- Print Section -->
+			<h1 class="semicolon-title">
+				HTML5 Typing Tutor
+			</h1>
+		</div>
+		<div class="grid_4 prefix_3">
+			<img src="screenshots/typing_turor.png" alt="HTML5 Typing Tutor by Semicolon Developers" />
+		</div>
+		<div class="grid_4">
+			<h2 class="semicolon-subtitle">
+				To help you speed up your typing skills
+			</h2>
+			<p><br/>
+				Simple Typing Tutor Implementation with HTML5/Javascript
+			</p>
+			<p>
+				<a class="button_next" href="#print2">Try our Typing Tutor Here</a>
+			</p>
+			<p>
+				Check the Source Code (Google Code): <a class="button_next" target="_blank" href="http://code.google.com/p/html5-typingtutor">http://code.google.com/p/html5-typingtutor</a>
+			</p>						
+		</div>
+		
+		<div class="clear">
+			&nbsp;
+		</div>
+		
+<!-- HTML5 Typing Tutor Details end here-->
+
+<!-- Semicolon Developers PHP-MySQL Course Materials -->
+		
+		<div class="divider">
+			&nbsp;<a id="php-mysql-course" name="php-mysql-course"></a>
+		</div>
+		<div class="grid_8 prefix_3 toppadding">
+		<!-- Print Section -->
+			<h1 class="semicolon-title">
+				PHP/MySQL Course
+			</h1>
+		</div>
+		<div class="grid_4 prefix_3">
+			<img src="screenshots/php-mysql-web-development.png" alt="PHP/MySQL web development @ Semicolon Developers" />
+		</div>
+		<div class="grid_4">
+			<h2 class="semicolon-subtitle">
+				We offer computer courses and trainings at Semicolon Developers. 				
+			</h2>
+			<p>
+			<br/>
+			<a class="button_next" target="_blank" href="http://semicolondev.com/services/computer-courses">http://semicolondev.com/services/computer-courses</a>						
+			This project includes all the PHP/MySQL Web application development course we teach. 
+			We will be updating the sample codes with our each batch of students.			
+			<br/><br/>
+			Check the Source Code (Semicolon Developers PHP/MySQL Course Materials @ Google Code) : <a class="button_next" target="_blank" href="http://code.google.com/p/semicolon-php">http://code.google.com/p/semicolon-php</a>
+			<br/>			
+			<br/>Course Includes:
+			<ul>				
+				<li class="desc">CSS &amp; xHTML</li>
+				<li class="desc">PHP/MySQL Snippets</li>
+				<li class="desc">Js/jQuery Snippets</li>				
+				<li class="desc">Wordpress</li>
+				<li class="desc">CodeIgniter References</li>
+			</ul>
+			</p>
+			
+			<p>
+			<br/>
+			At present we have two batch of stundets taking PHP/MySQL classes.<br/><br/>
+			Here's project from Batch 068/A1:<br/>
+			Simple Forum in PHP/MySQL <a class="button_next" target="_blank" href="http://code.google.com/p/2068a1-simple-php-forum/">http://code.google.com/p/2068a1-simple-php-forum/</a>						
+			<br/><br/>
+			And here's project from Batch 068/A2:<br/>
+			Simple CMS in PHP/MySQL <a class="button_next" target="_blank" href="http://code.google.com/p/2068a2-simple-php-cms">http://code.google.com/p/2068a2-simple-php-cms</a>						
+			
+			</p>	
+					
+		</div>						
+			<div class="clear">
+			&nbsp;
+		</div>
+		
+<!-- Semicolon Developers PHP-MySQL Course Materials ends here -->
+
+<!-- Source Code Listing -->
+
+		<div class="divider">&nbsp;<a id="codes" name="codes"></a></div>
+		<div class="grid_8 prefix_3 toppadding">
+			<h1 class="semicolon-title">
+				Semicolon Labs Code
+			</h1>
+		</div>
+		<div class="grid_4 prefix_3">
+			<img src="img/semicolon-codes.png" alt="Semicolon Labs Source Codes Links" />
+		</div>
+		<div class="grid_4">
+			<h2 class="semicolon-subtitle">
+				Download full source code of Semicolon Labs web site @ Github 
+			</h2>
+			<p>	
+			<br/>					
+				<a target="_blank" href="https://github.com/semicolondevelopers/labs">https://github.com/semicolondevelopers/labs</a>
+				<br/>Follow us in Github if you like our work.
+			</p>
+			<p>	<br/>		
+			If you have any feedbacks, suggestions to us or have ideas about 
+			these kind of projects feel open to contact us 
+			at our contact page : <a href="http://semicolondev.com/contact">http://semicolondev.com/contact</a>
+			</p>				
+			
+		</div>
+
+<!-- Source Code Listing ends here-->
+
+		<!-- Footer-->
+		<div class="grid_8 prefix_3 alpha">
+			<p class="footerleft">
+				&copy; 2011 <a href="http://semicolondev.com">Semicolon Developers</a>
+			</p>
+			<p class="footerright">
+				<a href="#home">Semicolon Labs</a>
+			</p>
+		</div>		
+		<div class="divider">
+			&nbsp;<a id="contact" name="contact"></a>
+		</div>
+		
+	</div>
+</body>
+</html>
