html5 typing tutor demo code added

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				Enjoy!
 			</p>
 			<p>
-				<a class="button_visit" href="#home">PLay Baghchal Online</a>
+				<a class="button_visit" href="./projects/baghchal/index.html">PLay Baghchal Online</a>
 			</p>
 			<p>
 				Check the Source Code (Google Code): <a class="button_next" target="_blank" href="http://code.google.com/p/bagchaal">http://code.google.com/p/bagchaal</a>
@@ -172,7 +172,7 @@
 				Simple Typing Tutor Implementation with HTML5/Javascript
 			</p>
 			<p>
-				<a class="button_next" href="#print2">Try our Typing Tutor Here</a>
+				<a class="button_next" href="./projects/html5-typingtutor/index.html">Try our Typing Tutor Here</a>
 			</p>
 			<p>
 				Check the Source Code (Google Code): <a class="button_next" target="_blank" href="http://code.google.com/p/html5-typingtutor">http://code.google.com/p/html5-typingtutor</a>
