corrected footer labs link

--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 				&copy; 2011 <a href="http://semicolondev.com">Semicolon Developers</a>
 			</p>
 			<p class="footerright">
-				<a href="#home">Semicolon Labs</a>
+				<a href="http://labs.semicolondev.com">Semicolon Labs</a>
 			</p>
 		</div>		
 		<div class="divider">
