corrected spelling mistakes at index page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				Why HTML5, Javascript 
 			</h2>
 			<p>
-				We like to sit and play inside broweser in realtime. That't it. If you like it, do it.
+				We like to sit and play inside web browsers (Google chrome) trying out realtime apps. That't it. If you like it, do it.
 			</p>
 			<h2 class="semicolon-subtitle">
 				Why Andriod? 
